test: StaticWriteTitle Enum과 DB의 데이터가 일치하는지 확인하는 테스트 코드 작성